@@ -12,7 +12,7 @@
 
 namespace Mono.Cecil {
 
-	public interface IMethodReturnType : ICustomAttributeProvider {
+	public interface IMethodReturnType : ICustomAttributeProvider, IHasMarshalSpec {
 
 		ITypeReference ReturnType { get; set; }
 	}
